# sirius_sprite_editor

./: .gitignore  CMakeLists.txt  README.md  keybindings.json
src/: main.cpp
src/app/: CanvasOptions.cpp  CanvasOptions.h  Editor.cpp  Editor.h  Keybindings.cpp  Keybindings.h  Project.cpp  Project.h  RecentFiles.cpp  RecentFiles.h
src/commands/: Command.h  CommandStack.cpp  CommandStack.h  SliceCommands.cpp  SliceCommands.h
src/model/: Slice.h  SliceStore.cpp  SliceStore.h
src/ops/: AutoSlicer.cpp  AutoSlicer.h  Exporter.cpp  Exporter.h  GridSlicer.cpp  GridSlicer.h  Importer.cpp  Importer.h  Trim.cpp  Trim.h
src/ui/: AutoSliceModal.cpp  AutoSliceModal.h  Canvas.cpp  Canvas.h  CanvasDraw.cpp  CanvasDraw.h  CanvasInput.cpp  CanvasInput.h  CanvasOptionsPanel.cpp  CanvasOptionsPanel.h  DocsWindow.cpp  DocsWindow.h  ExportModal.cpp  ExportModal.h  GridSliceModal.cpp  GridSliceModal.h  Inspector.cpp  Inspector.h  KeybindingsModal.cpp  KeybindingsModal.h  MainMenu.cpp  MainMenu.h  Palette.cpp  Palette.h  SliceList.cpp  SliceList.h  SliceModalUtil.cpp  SliceModalUtil.h  StatusBar.cpp  StatusBar.h  Theme.cpp  Theme.h  Toolbar.cpp  Toolbar.h
src/util/: ConfigDir.cpp  ConfigDir.h  Coords.h  FileDialog.cpp  FileDialog.h  Geometry.h  Guid.cpp  Guid.h  HitTest.cpp  HitTest.h  JsonFile.cpp  JsonFile.h  Logger.h
